# Msaga

./: CMakeLists.txt  README.md  out.asm
src/: CMakeLists.txt  Commands.cpp  Commands.hpp  Common.cpp  Common.hpp  Context.cpp  Context.hpp  Declarations.cpp  Declarations.hpp  Expressions.cpp  Expressions.h  Expressions.hpp  Global.cpp  Global.h  Global.hpp  Leafs.cpp  Leafs.hpp  Msaga.cpp  OtherNodes.cpp  OtherNodes.hpp  Serialization.cpp  Serialization.hpp  SyntaxTree.cpp  SyntaxTree.h  SyntaxTree.hpp  Utils.h  Utils.hpp
test/: GenerateTestCase.py  Lexer  RunTestCases.py  VerifyChain.py  test.py
test/examples2/01_primarni_izraz/: test.c  test.in  test.out
test/examples2/02_primarni_izraz/: test.c  test.in
test/examples2/03_upute/: test.c
test/examples2/04_upute/: test.c
test/examples2/05_upute/: test.c
test/examples2/06_upute/: test.c
test/examples2/07_upute/: test.c
test/examples2/08_upute/: test.c
test/examples2/09_upute/: test.c
test/examples2/10_upute/: test.c
test/examples2/11_upute/: test.c  test.in  test.out
test/examples2/13_upute/: test.c  test.in
test/examples2/14_upute/: test.c  test.in  test.out
test/examples2/15_upute/: test.c  test.in
test/examples2/16_upute/: test.c  test.in
test/examples2/17_primarni_izraz/: test.c  test.in
test/examples2/18_primarni_izraz/: test.c  test.in
test/examples2/19_postfiksni_izraz/: test.c  test.in
test/examples2/20_postfiksni_izraz/: test.c  test.in
test/examples6/01/: test.c  (+1 more)
test/yay/: Syntax  in.txt
tools/NodeTypeAssociation/: characters.txt  index.json  main.py  nodeTypes.txt
(+27 files in other folders)
